--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
     "author": "honue",
     "level": 2
   },
+  {
+  "ANiStrmv2": {
+    "name": "ANiStrmv2",
+    "description": "自动获取当季所有番剧，生成strm文件，mp刮削入库，emby直接播放，免去下载，轻松拥有一个番剧媒体库",
+    "version": "2.4.3",
+    "v2": true,
+    "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/anistrm.png",
+    "author": "GlowsSama",
+    "level": 2
+  },
   "AdaptiveIntroSkip": {
     "name": "自适应IntroSkip",
     "description": "通过用户的暂停与播放动作，批量标记片头片尾",
