--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "v1.8": "解决了容易提示cookie失效，导致同步失败的问题，现在用cookiecloud应该不用填保活了"
     },
     "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/douban.png",
-    "author": "honue",
+    "author": "GlowsSama",
     "level": 1
   },
   "BangumiSync": {
@@ -35,7 +35,7 @@
     "version": "1.9.0",
     "v2": true,
     "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/bangumi.jpg",
-    "author": "honue,happyTonakai",
+    "author": "GlowsSama",
     "level": 2,
     "history": {
       "v1.9.0": "支持通过episode group匹配季信息",
