--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "description": "将剧集在看、看完状态同步到豆瓣书影音档案。",
     "version": "1.9.4",
     "v2": true,
-    },
     "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/douban.png",
     "author": "honue,GlowsSama",
     "level": 1
@@ -25,7 +24,6 @@
     "v2": true,
     "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/bangumi.jpg",
     "author": "honue,GlowsSama",
-    "level": 2,
-    }
+    "level": 2
   }
 }
