--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "author": "honue,GlowsSama",
     "level": 2
   },
-  "DouBanWatching": {
-    "name": "豆瓣书影音档案",
-    "description": "将剧集在看、看完状态同步到豆瓣书影音档案。",
-    "version": "1.9.4",
-    "v2": true,
-    "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/douban.png",
-    "author": "honue,GlowsSama",
-    "level": 1
-  },
-  "BangumiSync": {
-    "name": "Bangumi打格子",
-    "description": "将你在媒体库上的番剧观看，同步到Bangumi在看状态",
-    "version": "1.9.0",
-    "v2": true,
-    "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/bangumi.jpg",
-    "author": "honue,GlowsSama",
-    "level": 2
-  }
+#  "DouBanWatching": {
+#    "name": "豆瓣书影音档案",
+#    "description": "将剧集在看、看完状态同步到豆瓣书影音档案。",
+#    "version": "1.9.4",
+#    "v2": true,
+#    "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/douban.png",
+#    "author": "honue,GlowsSama",
+#    "level": 1
+#  },
+#  "BangumiSync": {
+#    "name": "Bangumi打格子",
+#    "description": "将你在媒体库上的番剧观看，同步到Bangumi在看状态",
+#    "version": "1.9.0",
+#    "v2": true,
+#    "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/bangumi.jpg",
+#    "author": "honue,GlowsSama",
+#    "level": 2
+#  }
 }
