--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "ANiStrm10": {
     "name": "ANiStrm10",
-    "description": "自动获取当季所有番剧，生成strm文件，mp刮削入库，emby直接播放，免去下载，轻松拥有一个番剧媒体库",
+    "description": "从RSS自动获取当季所有番剧，生成strm文件，mp刮削入库，emby直接播放，免去下载，轻松拥有一个番剧媒体库",
     "version": "3.0.0",
     "v2": true,
     "icon": "https://raw.githubusercontent.com/honue/MoviePilot-Plugins/main/icons/anistrm.png",
